// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Renders status 'error' correctly 1`] = `
<div
  class="container d-flex"
>
  <input
    class="form-control with-invalid-icon is-invalid"
    type="text"
    value=""
  />
</div>
`;

exports[`Input Renders status 'loading' correctly 1`] = `
<div
  class="container d-flex"
>
  <input
    class="inputLoading form-control with-invalid-icon"
    type="text"
    value=""
  />
  <div
    class="loadingSpinner spinner"
  />
</div>
`;

exports[`Input Renders status 'valid' correctly 1`] = `
<div
  class="container d-flex"
>
  <input
    class="form-control with-invalid-icon is-valid"
    type="text"
    value=""
  />
</div>
`;
